--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.8",
         "sass-loader": "^10.1.1"
+    },
+    "dependencies": {
+        "micromodal": "^0.4.6"
     }
 }
