--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "highlight.js": "^10.6.0",
-        "micromodal": "^0.4.6"
+        "micromodal": "^0.4.6",
+        "tippy.js": "^6.3.1"
     }
 }
