--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/fortify": "^1.7",
         "laravel/framework": "^8.12",
         "laravel/socialite": "^5.2",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "socialiteproviders/reddit": "^4.1"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
