--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "postcss": "^8.2.9",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.8",
         "sass-loader": "^10.1.1"
     },
     "dependencies": {
-        "highlight.js": "^10.6.0",
+        "highlight.js": "^10.7.1",
         "micromodal": "^0.4.6",
-        "tippy.js": "^6.3.1"
+        "tippy.js": "^6.3.1",
+        "toastify-js": "^1.10.0"
     }
 }
