--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "sass-loader": "^10.1.1"
     },
     "dependencies": {
+        "@jaames/iro": "^5.5.0",
         "highlight.js": "^10.7.1",
         "micromodal": "^0.4.6",
         "tippy.js": "^6.3.1",
