--- a/composer.json
+++ b/composer.json
@@ -9,17 +9,18 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "ext-json": "*",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.0.1",
+        "guzzlehttp/guzzle": "7.4.5",
+        "guzzlehttp/psr7": "2.4",
         "laravel/fortify": "^1.7",
         "laravel/framework": "^8.12",
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
         "socialiteproviders/deezer": "^4.1",
         "socialiteproviders/reddit": "^4.1",
-        "socialiteproviders/spotify": "^4.1",
-      "ext-json": "*"
+        "socialiteproviders/spotify": "^4.1"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
