--- a/composer.json
+++ b/composer.json
@@ -13,23 +13,23 @@
         "backpack/crud": "^5.6",
         "guzzlehttp/guzzle": "7.4.5",
         "guzzlehttp/psr7": "2.4",
-        "laravel/fortify": "^1.9",
-        "laravel/framework": "^9.52",
-        "laravel/socialite": "^5.3",
-        "laravel/tinker": "^2.7",
+        "laravel/fortify": "^1.16",
+        "laravel/framework": "^10.26",
+        "laravel/socialite": "^5.6",
+        "laravel/tinker": "^2.8",
         "socialiteproviders/deezer": "^4.1",
         "socialiteproviders/reddit": "^4.1",
         "socialiteproviders/spotify": "^4.1",
-        "symfony/process": "^6.0",
+        "symfony/process": "^6.2",
         "ziming/json-field-for-backpack": "^1.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
-        "laravel/sail": "^1.15",
+        "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.3",
         "phpunit/phpunit": "^9.5.10",
-        "spatie/laravel-ignition": "^1.4"
+        "spatie/laravel-ignition": "^2.0"
     },
     "config": {
         "optimize-autoloader": true,
@@ -53,7 +53,7 @@
             "Tests\\": "tests/"
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true,
     "scripts": {
         "post-autoload-dump": [
