--- a/composer.json
+++ b/composer.json
@@ -10,26 +10,26 @@
     "require": {
         "php": "^8.1",
         "ext-json": "*",
-        "backpack/crud": "^5.6",
-        "guzzlehttp/guzzle": "7.4.5",
-        "guzzlehttp/psr7": "2.4",
-        "laravel/fortify": "^1.16",
-        "laravel/framework": "^10.26",
-        "laravel/socialite": "^5.6",
-        "laravel/tinker": "^2.8",
+        "backpack/crud": "^6.0",
+        "guzzlehttp/guzzle": "7.8.0",
+        "guzzlehttp/psr7": "^2.5.1",
+        "laravel/fortify": "^1.18",
+        "laravel/framework": "^10.26.2",
+        "laravel/socialite": "^5.9.1",
+        "laravel/tinker": "^2.8.2",
         "socialiteproviders/deezer": "^4.1",
         "socialiteproviders/reddit": "^4.1",
         "socialiteproviders/spotify": "^4.1",
-        "symfony/process": "^6.2",
+        "symfony/process": "^6.3.4",
         "ziming/json-field-for-backpack": "^1.2"
     },
     "require-dev": {
-        "fakerphp/faker": "^1.9.1",
-        "laravel/sail": "^1.18",
-        "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^6.3",
-        "phpunit/phpunit": "^9.5.10",
-        "spatie/laravel-ignition": "^2.0"
+        "fakerphp/faker": "^1.23.0",
+        "laravel/sail": "^1.25",
+        "mockery/mockery": "^1.6.6",
+        "nunomaduro/collision": "^6.4",
+        "phpunit/phpunit": "^9.6.13",
+        "spatie/laravel-ignition": "^2.3"
     },
     "config": {
         "optimize-autoloader": true,
